--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -399,7 +399,6 @@
                         <outlet property="activityIndicator" destination="pOY-HN-oDJ" id="aDz-dO-dkN"/>
                         <outlet property="loadingView" destination="tuv-sm-tx8" id="tCi-VM-T41"/>
                         <outlet property="myCollectionView" destination="x0Q-Ex-rGH" id="PDv-Ih-ya1"/>
-                        <segue destination="tvL-jL-Hfj" kind="show" identifier="toSearchResultSegue" id="DXW-tt-hag"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -427,7 +426,7 @@
                     </constraints>
                 </view>
             </objects>
-            <point key="canvasLocation" x="375" y="165"/>
+            <point key="canvasLocation" x="-653" y="150"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="vZp-Du-1JN">
@@ -729,46 +728,72 @@
                                 <rect key="frame" x="0.0" y="-44" width="320" height="612"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b51-rc-Yco">
-                                    <size key="itemSize" width="155" height="230"/>
+                                    <size key="itemSize" width="155" height="308"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="KvV-wM-mVc" customClass="MovieCollectionViewCell" customModule="PalCine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="20" width="155" height="230"/>
+                                        <rect key="frame" x="0.0" y="20" width="155" height="290"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="155" height="230"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="155" height="290"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="e0Y-jc-fi7">
-                                                    <rect key="frame" x="0.0" y="0.0" width="155" height="189"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="155" height="232"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="189" id="bOM-aP-jtA"/>
+                                                        <constraint firstAttribute="height" constant="232" id="bOM-aP-jtA"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hYv-Bf-tBn">
-                                                    <rect key="frame" x="10" y="190" width="135" height="38"/>
+                                                    <rect key="frame" x="8" y="231" width="139" height="39"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="753" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="raB-jZ-qZ5">
+                                                    <rect key="frame" x="8" y="270" width="81" height="20"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHh-dh-CNj">
+                                                            <rect key="frame" x="0.0" y="3" width="40.5" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wa-fm-8ED">
+                                                            <rect key="frame" x="40.5" y="1" width="40.5" height="18"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                            <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="Y4X-7a-duC"/>
+                                                    </constraints>
+                                                </stackView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="hYv-Bf-tBn" secondAttribute="bottom" constant="-6" id="2ZB-ty-Gap"/>
                                             <constraint firstAttribute="trailing" secondItem="e0Y-jc-fi7" secondAttribute="trailing" id="3ij-O6-dOW"/>
-                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="top" secondItem="e0Y-jc-fi7" secondAttribute="bottom" constant="1" id="JSw-Af-zxP"/>
+                                            <constraint firstItem="raB-jZ-qZ5" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leading" constant="8" id="4NZ-a1-5Of"/>
+                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leadingMargin" id="8cl-fM-frG"/>
+                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="top" secondItem="e0Y-jc-fi7" secondAttribute="bottom" constant="-1" id="DQM-HM-4p4"/>
                                             <constraint firstItem="e0Y-jc-fi7" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leading" id="PNB-OH-nVg"/>
                                             <constraint firstItem="e0Y-jc-fi7" firstAttribute="top" secondItem="KvV-wM-mVc" secondAttribute="top" id="XwB-1U-lBz"/>
-                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="centerX" secondItem="e0Y-jc-fi7" secondAttribute="centerX" id="c6c-7R-nlJ"/>
-                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leadingMargin" constant="2" id="rT1-nU-f1v"/>
+                                            <constraint firstAttribute="trailing" secondItem="raB-jZ-qZ5" secondAttribute="trailing" constant="66" id="fyl-z0-Ekv"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="hYv-Bf-tBn" secondAttribute="trailing" id="jtn-AC-AYe"/>
+                                            <constraint firstItem="raB-jZ-qZ5" firstAttribute="top" secondItem="hYv-Bf-tBn" secondAttribute="bottom" id="uOM-9I-UJv"/>
+                                            <constraint firstAttribute="bottom" secondItem="raB-jZ-qZ5" secondAttribute="bottom" id="vTk-xh-Dh6"/>
                                         </constraints>
-                                        <size key="customSize" width="155" height="230"/>
+                                        <size key="customSize" width="155" height="290"/>
                                         <connections>
                                             <outlet property="posterImageView" destination="e0Y-jc-fi7" id="B4j-WC-poY"/>
+                                            <outlet property="ratingDescLabel" destination="DHh-dh-CNj" id="8a7-IB-psf"/>
+                                            <outlet property="ratingLabel" destination="4wa-fm-8ED" id="gy7-0F-fLX"/>
+                                            <outlet property="ratingStackView" destination="raB-jZ-qZ5" id="RQn-2u-lLI"/>
                                             <outlet property="titleLBL" destination="hYv-Bf-tBn" id="bQU-4Q-Opv"/>
                                         </connections>
                                     </collectionViewCell>
@@ -792,6 +817,7 @@
                         <outlet property="activityIndicator" destination="CXx-nS-fBf" id="bjC-Ox-cr0"/>
                         <outlet property="loadingView" destination="alq-pG-MvH" id="dcc-QK-pee"/>
                         <outlet property="myCollectionView" destination="LJC-0p-CSC" id="Kbt-tL-THO"/>
+                        <segue destination="IJU-dv-QlT" kind="show" identifier="toDetailsSegue" id="i7o-3s-bko"/>
                     </connections>
                 </viewController>
                 <view contentMode="scaleToFill" id="alq-pG-MvH">
@@ -819,7 +845,7 @@
                 </view>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4I0-Ie-LL6" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1110" y="165"/>
+            <point key="canvasLocation" x="424" y="168"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rzw-8V-W9a">
@@ -846,4 +872,7 @@
         <image name="placeholderCastImage" width="270" height="348"/>
         <image name="posterPlaceholder" width="465" height="567"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="i7o-3s-bko"/>
+    </inferredMetricsTieBreakers>
 </document>
