--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                         <outlet property="activityIndicatorView" destination="ao1-Ha-Ezx" id="33j-Sc-whn"/>
                         <outlet property="loadingImageView" destination="Pp7-7Z-JBT" id="qRP-tL-anH"/>
                         <outlet property="loadingStatusLabel" destination="h5l-hb-sFd" id="tIO-yD-lep"/>
-                        <segue destination="mBE-CW-h3y" kind="show" identifier="toHome" id="9Ww-81-SOm"/>
+                        <segue destination="Pds-hu-bxn" kind="show" identifier="toHome" id="9Ww-81-SOm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xYI-71-50x" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -73,7 +73,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I0m-Ij-U6p">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="868"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="819"/>
                                 <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="featureMovieCell" rowHeight="160" id="XVQ-cs-aiy" customClass="FeatureMovieTableViewCell" customModule="PalCine" customModuleProvider="target">
@@ -319,7 +319,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0dU-rQ-t9P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1282.5" y="-900"/>
+            <point key="canvasLocation" x="1680" y="-900"/>
         </scene>
         <!--Pal Cine-->
         <scene sceneID="tne-QT-ifu">
@@ -448,7 +448,7 @@
                                 </constraints>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E98-iJ-2MI">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="751"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q8I-0O-AJH" userLabel="container">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="652"/>
@@ -711,7 +711,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rv7-vY-vLk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2034.375" y="-900"/>
+            <point key="canvasLocation" x="2431.875" y="-900"/>
         </scene>
         <!--Search-->
         <scene sceneID="Vue-tZ-lNW">
@@ -726,7 +726,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LJC-0p-CSC">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b51-rc-Yco">
                                     <size key="itemSize" width="155" height="308"/>
@@ -848,10 +848,11 @@
             </objects>
             <point key="canvasLocation" x="488" y="244"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="eyf-ZF-o1a">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mBE-CW-h3y" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="UjZ-JF-icF"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JnU-Jn-0ew">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -864,7 +865,24 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6CO-sg-Fdi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="452" y="-1152"/>
+            <point key="canvasLocation" x="885" y="-1152.4647887323945"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="off-ho-ssV">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Pds-hu-bxn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nBq-An-J9n">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="mBE-CW-h3y" kind="relationship" relationship="viewControllers" id="22n-LT-3dx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wgA-Pv-XE2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="187.5" y="-1152.4647887323945"/>
         </scene>
     </scenes>
     <resources>
